Bug 424466 - When I right-click on a folder on desktop and choose "Paste one file", the file is pasted on desktop
Summary: When I right-click on a folder on desktop and choose "Paste one file", the fi...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 5.19.3
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2020-07-20 13:47 UTC by Patrick Silva
Modified: 2020-08-14 22:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-07-20 13:47:52 UTC
STEPS TO REPRODUCE
1. copy any file with Dolphin
2. create a folder on desktop
3. right-click on the just created folder, choose "Paste one file"

OBSERVED RESULT
the file is pasted on desktop

EXPECTED RESULT
the file should be pasted  into the right-clicked folder

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.19.3
KDE Frameworks Version: 5.72.0
Qt Version: 5.15.0
Comment 1 Bug Janitor Service 2020-08-09 16:11:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/100
Comment 2 Nate Graham 2020-08-14 22:17:32 UTC
Git commit d8a94880ab2fc994e4d1cc28a9581520de16c6d3 by Nate Graham, on behalf of Grégoire Duvauchelle.
Committed on 14/08/2020 at 22:17.
Pushed by ngraham into branch 'master'.

Fix pasting on desktop when a folder is selected

This fixes a bug where using "Paste one file" in the right-click menu of
a folder on the desktop would paste on the desktop instead of into the
selected folder

M  +7    -1    containments/desktop/plugins/folder/foldermodel.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/d8a94880ab2fc994e4d1cc28a9581520de16c6d3