Fix pasting on desktop when a folder is selected

This fixes a bug where using "Paste one file" in the right-click menu of
a folder on the desktop would paste on the desktop instead of into the
selected folder

BUG: 424466